--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 Flask==0.10.1
+Flask-Login==0.2.11
+Flask-OpenID==1.2.4
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.12
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.6
+Tempita==0.5.2
+WTForms==2.0.2
 Werkzeug==0.9.6
+decorator==4.0.2
 gunicorn==19.0.0
 itsdangerous==0.24
 keyring==5.3
 lxml==3.4.4
-pyjade==3.0.0
+pbr==1.6.0
+python-openid==2.2.5
 requests==2.6.2
 six==1.9.0
+sqlalchemy-migrate==0.9.7
+sqlparse==0.1.16
 wsgiref==0.1.2
 yagmail==0.3.1
