--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ SQLAlchemy==0.9.6
 Tempita==0.5.2
 WTForms==2.0.2
 Werkzeug==0.9.6
+argparse==1.3.0
 decorator==4.0.2
 gunicorn==19.0.0
 itsdangerous==0.24
