--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Mail==0.9.1
 Flask-OpenID==1.2.4
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.12
@@ -11,6 +12,7 @@ Tempita==0.5.2
 WTForms==2.0.2
 Werkzeug==0.9.6
 argparse==1.3.0
+blinker==1.4
 decorator==4.0.2
 gunicorn==19.0.0
 itsdangerous==0.24
